# spenditure-html

./: .gitignore  Account.html  AddNewBank.html  HomePage.html  README.md  addAccount.html  budgforfinan.html  code.html  home.html  index.css  index.html  investing.html  login.html  manage.py  pyproject.toml  services.html  sign-up.html  target.html  webLogin.html  webSignUp.html
spenditure_app/: apps.py  views.py
spenditure_app/templates/: about.html  home.html  signup.html
spenditure_html/: asgi.py  settings.py  urls.py  wsgi.py
static/js/: index.js
