[tool.poetry]
name = "spenditure-html"
version = "0.1.0"
description = "The is a budget management website"
authors = ["liu chiko"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
